# breakout-clone

./: .gitignore  Cargo.toml  README.md  dist.sh
assets/: default.yaml  skyscraper.yaml
src/: ball.rs  bricks.rs  camera.rs  debug.rs  main.rs  paddle.rs  score.rs  walls.rs
